basic responsive design added

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -12,15 +12,75 @@
   }
 
   &-section {
-    @include utilities;
-    width: 50%;
+    padding-left: 8rem;
+    padding-right: 5rem;
+    padding-top: 5rem;
+    width: 80%;
+    text-align: justify;
 
     p {
       color: $primary-color-white;
       letter-spacing: 1px;
       padding: 1rem 0;
       font-weight: lighter;
-      font-size: 1.3rem;
+      font-size: 1.2rem;
+    }
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .about {
+    width: 80%;
+
+    h1 {
+      font-size: 3.3rem !important;
+    }
+
+    &-section {
+      width: 100%;
+      padding: 5rem 5rem 0 5rem !important;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .about {
+    width: 100%;
+
+    h1 {
+      font-size: 2.2rem !important;
+    }
+
+    &-section {
+      width: 100%;
+      padding: 6rem 4rem 0 4rem !important;
+
+      p {
+        font-size: 1.1rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .about {
+    width: 100%;
+
+    &-content {
+      height: 100% !important;
+    }
+
+    h1 {
+      font-size: 2.2rem !important;
+    }
+
+    &-section {
+      width: 100%;
+      padding: 6rem 2rem 0 2rem !important;
+
+      p {
+        font-size: 1rem;
+      }
     }
   }
 }
