--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -56,7 +56,7 @@
 
   .email-section {
     padding-left: 7rem;
-    padding-top: 20rem;
+    padding-top: 12rem;
 
     &__text {
       color: $primary-color-white;
@@ -65,5 +65,78 @@
         color: $primary-color-yellow;
       }
     }
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .home {
+    width: 80%;
+
+    .developer {
+      padding: 6rem 4rem 0 4rem;
+
+      span {
+        font-size: 3rem;
+      }
+    }
+  }
+
+  .email-section {
+    padding-left: 4rem !important;
+    padding-top: 10rem !important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .home {
+    width: 100%;
+
+    .developer {
+      padding: 8rem 3rem 0 3rem;
+    }
+    .front-end {
+      h4 {
+        font-size: 1rem !important;
+      }
+    }
+
+    .contact-btn {
+      font-size: 1.1rem !important;
+      padding: 0.5rem 1.6rem !important;
+    }
+  }
+
+  .email-section {
+    padding-left: 3rem !important;
+    padding-top: 10rem !important;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .home {
+    width: 100% !important;
+
+    .developer {
+      padding: 8rem 3rem 0 3rem;
+
+      span {
+        font-size: 2rem !important;
+      }
+
+      .front-end {
+        h4 {
+          font-size: 0.9rem !important;
+        }
+      }
+
+      .contact-btn {
+        font-size: 1rem !important;
+        padding: 0.5rem 1.2rem !important;
+        letter-spacing: 1px !important;
+      }
+    }
+  }
+  .email-section {
+    padding-left: 3rem !important;
   }
 }
