--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -7,6 +7,7 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  border-right: 3px solid $primary-color-yellow;
 
   &__logo {
     line-height: 2;
@@ -85,4 +86,99 @@
     content: "";
     margin: 0.5rem 0;
   }
+}
+
+.close {
+  cursor: pointer;
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  display: none;
+  &-1 {
+    width: 20px;
+    height: 2px;
+    background-color: $primary-color-white;
+    content: "";
+    transform: rotate(50deg);
+  }
+  &-2 {
+    width: 20px;
+    height: 2px;
+    background-color: $primary-color-white;
+    content: "";
+    transform: rotate(-45deg);
+  }
+}
+
+.mobile-menu {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  border-right: none;
+  background-color: rgba(24, 24, 24, 0.9) !important;
+
+  &-nav {
+    display: flex;
+    margin-top: 0 auto;
+    padding: 0 0.5rem;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .navbar {
+    width: 12rem;
+
+    &__logo-link {
+      font-size: 2.5rem;
+    }
+
+    &__nav {
+      margin-top: 6rem;
+
+      &-link {
+        font-size: 1.25rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    width: 100%;
+    height: auto;
+    display: flex;
+    position: absolute;
+    border-right: none;
+    border-bottom: 3px solid $primary-color-yellow;
+    align-items: center;
+    padding: 0 0.5rem;
+
+    &__logo-link {
+      font-size: 2.1rem;
+    }
+
+    &__nav {
+      display: flex;
+      padding: 0 0.5rem;
+      margin-left: auto;
+      margin-top: 0;
+      &-item {
+        display: none;
+        padding: 1rem 0.4rem;
+
+        &:last-child {
+          display: block;
+          padding: 0 !important;
+        }
+      }
+
+      &-link {
+        font-size: 1.1rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 530px) {
 }
