--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -21,9 +21,11 @@
 
       &-label {
         margin: 0.5rem 0;
+        font-weight: lighter;
+        letter-spacing: 1px;
       }
       &-control {
-        margin: 1rem 0;
+        margin-bottom: 0.5rem;
         width: 50%;
         overflow: hidden;
 
@@ -74,4 +76,92 @@
 
 .pl {
   padding-left: 0.5rem;
+}
+
+@media screen and (max-width: 992px) {
+  .contact {
+    width: 80%;
+
+    &-section {
+      padding: 6rem 5rem 0 5rem;
+
+      h1 {
+        font-size: 3.3rem;
+      }
+    }
+
+    .form {
+      &__group-control {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .contact {
+    width: 100%;
+
+    &-section {
+      padding: 6rem 5rem 0 5rem;
+
+      h1 {
+        font-size: 2.2rem;
+      }
+    }
+
+    .form {
+      &__group-control {
+      }
+
+      &__group-label {
+        label {
+          font-size: 1.2rem;
+        }
+      }
+
+      .contact-btn {
+        font-size: 1.1rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .contact {
+    width: 100%;
+
+    &-content {
+      height: 100% !important;
+    }
+
+    &-section {
+      padding: 5.3rem 1.5rem 0 1.5rem;
+
+      h1 {
+        font-size: 2rem;
+      }
+    }
+
+    .form {
+      &__group-control {
+        input[type="text"],
+        input[type="email"],
+        textarea {
+          font-size: 0.9rem;
+        }
+      }
+
+      &__group-label {
+        label {
+          font-size: 1rem;
+        }
+      }
+
+      .contact-btn {
+        font-size: 0.9rem;
+        padding: 0.4rem 2.2rem;
+      }
+    }
+  }
 }
