--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -145,7 +145,7 @@
     width: 100%;
 
     &-content {
-      height: 100% !important;
+      height: 100vh !important;
     }
     &-content__item {
       display: block;
@@ -192,7 +192,7 @@
     width: 100%;
 
     &-content {
-      height: 100% !important;
+      height: 100vh !important;
     }
 
     &-content__item {
