mobile menu fixed

--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -56,7 +56,7 @@
       background-color: $secondary-color-dark;
       width: 100%;
       margin: 0.5rem 0;
-
+      border: 1px solid $primary-color-yellow;
       &-bar {
         text-align: center;
       }
