--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -5,7 +5,9 @@
   width: 85%;
 
   &-content {
-    @include main-section;
+    background-color: $primary-color-dark;
+    height: 100vh;
+    width: 100%;
   }
   h1 {
     @include head;
@@ -67,7 +69,7 @@
     width: 100%;
 
     &-content {
-      height: 100vh !important;
+      height: 100% !important;
     }
 
     h1 {
@@ -77,7 +79,8 @@
     &-section {
       width: 100%;
       padding: 6rem 2rem 0 2rem !important;
-
+      height: 100% !important;
+      min-height: 100vh !important;
       p {
         font-size: 1rem;
       }
