--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,10 +3,10 @@
 .navbar {
   background-color: $secondary-color-dark;
   width: 15%;
-  height: 100vh;
+  min-height: 100vh;
+
   text-align: center;
   position: relative;
-  overflow: hidden;
   border-right: 3px solid $primary-color-yellow;
 
   &__logo {
@@ -109,7 +109,7 @@
 @media screen and (max-width: 768px) {
   .navbar {
     width: 100%;
-    height: auto;
+    min-height: auto;
     display: flex;
     position: absolute;
     border-right: none;
