--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -117,10 +117,10 @@
     width: 100% !important;
 
     .developer {
-      padding: 8rem 3rem 0 3rem;
+      padding: 8rem 1.2rem 0 1.2rem;
 
       span {
-        font-size: 2rem !important;
+        font-size: 1.7rem !important;
       }
 
       .front-end {
@@ -130,13 +130,14 @@
       }
 
       .contact-btn {
-        font-size: 1rem !important;
+        font-size: 0.85rem !important;
         padding: 0.5rem 1.2rem !important;
         letter-spacing: 1px !important;
       }
     }
   }
   .email-section {
-    padding-left: 3rem !important;
+    padding-left: 1.2rem !important;
+    padding-top: 5rem !important;
   }
 }
